--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "vue-js-toggle-button": "^1.3.3"
   },
   "devDependencies": {
+    "@iconify/vue": "^1.0.6",
     "@vue/cli-plugin-babel": "^3.12.1",
     "@vue/cli-plugin-eslint": "^3.12.1",
     "@vue/cli-service": "^3.12.1",
